@@ -4757,6 +4757,7 @@ Ms Pac-Man (Stella extended codes):
         <tr><td>FC </td><td>Amiga Power Play Aracde 16/32K </td><td>.FC </td></tr>
         <tr><td>FE </td><td>8K Decathlon </td><td>.FE </td></tr>
         <tr><td>MDM </td><td>Menu Driven Megacart </td><td>.MDM </td></tr>
+        <tr><td>MVC </td><td>Movie Cart</td><td>.MVC </td></tr>
         <tr><td>SB </td><td>128-256K SUPERbanking </td><td>.SB </td></tr>
         <tr><td>TVBOY</td><td>512K TV Boy (127 games)</td><td>.TVB, .TVBOY </td></tr>
         <tr><td>UA </td><td>8K UA Ltd. </td><td>.UA </td></tr>
